# madrid-aire

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .vercelignore  MADRID_Aire_ultimate_product_engineering_bible_v6_copilot.md  README.md  package-lock.json  package.json  requirements.txt  vercel.json  wrangler.toml
.github/workflows/: daily-ingest.yml
api/: index.py
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/src/: main.py  settings.py
apps/api/src/db/: cloudflare_d1_client.py  supabase_client.py
apps/api/src/routes/: alerts.py  ayto.py  health.py  jobs.py  metrics.py  observations.py  pollutants.py  predictions.py  stations.py  system.py
apps/api/src/schemas/: alert.py  metric.py  observation.py  pollutant.py  prediction.py  shared.py  station.py  system.py
apps/api/src/services/: alerts_service.py  ayto_service.py  data_access.py  history_service.py  ingest_service.py  jobs_service.py  metrics_service.py  observations_service.py  predictions_service.py  stations_service.py  system_service.py
apps/api/src/utils/: normalize.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/: README.md  build_no2_baseline_artifacts.py  build_no2_model_v1_artifacts.py  download_air_quality.py  normalize_air_quality.py  requirements-ml.txt  seed_cloudflare_d1.py
docs/: README.md  architecture.md  data-dictionary.md  deployment.md  design-system.md  etl.md  known-limitations.md  ml-model-card.md  mlops.md  portfolio-case-study.md  sources.md
sql/: README.md  schema.sql
(+67 files in other folders)
