[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madrid-aire-api"
version = "0.1.0"
description = "FastAPI backend for MADRID Aire"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "pandas>=2.2.3",
  "numpy>=2.1.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
